syntax = "proto3";
option go_package="theterriblechild/CloudApp/common/model";
package model;

message Account {
    //@inject_tag: db:"id"
    string id = 1;
    //@inject_tag: db:"name"
    string name = 2;
}

message User {
    //@inject_tag: db:"id"
    string id =1;
    //@inject_tag: db:"email"
    string email = 2;
    //@inject_tag: db:"first_name"
    string first_name = 3;
    //@inject_tag: db:"last_name"
    string last_name = 4;
    //@inject_tag: db:"account_id"
    string account_id = 5;
    //@inject_tag: db:"password_hash"
    string password_hash = 6;
    //@inject_tag: db:"created_date"
    int64 created_date = 7;
}

message Agent {
    //@inject_tag: db:"id"
    string id = 1;
    //@inject_tag: db:"account_id"
    string account_id = 2;
    //@inject_tag: db:"name"
    string name = 3;
}